@@ -1,3 +1,8 @@
+2008-11-26  Stan Cox  <scox@redhat.com>
+
+	* systemtap.base/static_uprobes.exp: Check debuginfo static uprobes.
+	* systemtap.base/static_uprobes.stp: Check debuginfo static uprobes.
+
 2008-11-21  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR5689.
