@@ -1,3 +1,7 @@
+2008-11-26  Stan Cox  <scox@redhat.com>
+
+	* tapsets.cxx (dwarf_builder::build): Support debuginfo static uprobes.
+
 2008-11-26  Frank Ch. Eigler  <fche@elastic.org>
 
 	* translate.cxx (emit_module_exit): Add another synchronize_sched.
